技詳細画面（仮）を実装

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,9 @@
 
     <string name="action_settings">Settings</string>
 
+    <!-- 共通 -->
+    <string name="close">閉じる</string>
+
     <!-- クラス選択画面 -->
     <string name="class_select_text">クラスを選択してください</string>
     <string name="class_beginner">初心者クラス</string>
